# osmpbf-to-pgsql

./: Cargo.toml  LICENSE  schema.sql
.github/workflows/: ci.yml  deploy.yml
src/: lib.rs  osm.rs  osmpbf.rs  postgres.rs
tests/: reader.rs
