[package]
name = "osmpbf-to-pgsql"
version = "0.2.0"
edition = "2024"
description = "Dump an OpenStreetMap PBF file to Osmosis pg-snapshot format"
license = "MIT"

[features]
enable-compare-pgsql-dump = ["dep:float-cmp", "dep:hex"]

[[bin]]
name = "compare-pgsql-dump"
required-features = ["enable-compare-pgsql-dump"]

[dependencies]
anstyle = "1.0.14"
clap = { version = "4.6.0", features = ["derive"] }
float-cmp = { version = "0.10.0", optional = true }
geo-types = "0.7.18"
geozero = { version = "0.14.0", features = ["with-postgis-postgres"] }
hex = { version = "0.4.3", optional = true }
itoap = "1.0.1"
osmpbfreader = { version = "0.19.1", features = ["full-metadata"] }
#osmpbfreader = { version = "0.19.0" }
postgres = "0.19.12"
postgres-types = { version = "0.2.12", features = ["with-chrono-0_4", "with-geo-types-0_7"] }
rustc-hash = "2.1.1"
smartstring = "1.0.1"
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }

[patch.crates-io]
osmpbfreader = { git = "https://github.com/jocelynj/osmpbfreader-rs.git" }

[dev-dependencies]
flate2 = "1.1.9"

[profile.release]
lto = "thin"             # Enable link-time optimization
codegen-units = 1        # Better optimization (slower compile)

[profile.profiling]
inherits = "release"
debug = true             # Full debug info for symbols
strip = false            # Don't strip symbols
